fixed permissions and match urls

--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,9 @@
   "description": "htmlもしくはbody要素のlang属性にjaが指定してあればスタイルシートでフォントをメイリオにします。",
   "version": "1.0.0",
   "content_scripts": [{
-    "matches": [
-      "https://*/*",
-      "http://*/*",
-      "file:///*/*"
-    ],
+    "matches": ["<all_urls>"],
     "css": ["Meiryo.css"],
     "run_at": "document_start"
   }],
-  "permissions": []
+  "permissions": ["<all_urls>"]
 }
